--- a/static/theme.css
+++ b/static/theme.css
@@ -7,9 +7,29 @@ body {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    width: 100vw;
     min-height: 100vh;
     margin: 0;
+
+    background-image: url('./wave.svg');
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-color: #FF6A59;
+}
+
+.full-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0 19px 38px rgb(0 0 0 / 30%), 0 15px 12px rgb(0 0 0 / 22%);
+    background-color: white;
+    padding: 3vw 5vw;
+    margin: 5vw;
+
+    -webkit-transition: width 2s ease-in-out;
+    -moz-transition: width 2s ease-in-out;
+    -o-transition: width 2s ease-in-out;
+    transition: width 2s ease-in-out;
 }
 
 .container {
@@ -19,7 +39,7 @@ body {
 
 .container select {
     height: fit-content;
-    margin-left: 2vw;
+    margin-left: 1vw;
 }
 
 form button {
@@ -42,7 +62,6 @@ form button[disabled] {
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-between;
 }
 
 .organ-selector h4 {
@@ -57,15 +76,27 @@ option:checked {
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
+    height: 27vw;
     width: 70vw;
-    height: 35vw;
 }
 
 .loading {
     background-repeat: no-repeat;
     background-position: center;
     background-size: contain;
-    width: 50vw;
+    width: 100%;
     height: 20vw;
     background-image: url('https://www.maxhealthcare.in/img/loader-rolling.gif');
+}
+
+.row {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.row>img {
+    width: 12.5vw;
+    height: 13vw;
+    margin-right: 1vw;
 }
